2003-10-23  Paolo Maggi  <paolo.maggi@polito.it>
	
	Fixed bug #102543

	* gedit-mdi.c (gedit_mdi_add_open_button)(tooltip_func): add
	tooltips to the recent files popup menu
	(tip_func)(gedit_mdi_app_created_handler): show a hint in the 
	status bar when selecting a recent file in the File menu
	
2003-10-21  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-ui.xml: s/string/text (fixes bug #117518)

2003-10-21  Paolo Maggi  <paolo.maggi@polito.it>

	Partially fixes compilation on Darwin (bug #124238, patch by
	Jerry Talkington <jtalkington@users.sourceforge.net>)

	* gedit-document.c (gedit_document_load): s/gsize/gint for file_size,
	s/eel_read_entire_file/gnome_vfs_read_entire_file

	* gedit-plugins-engine.c: #include <sys/types.h> before <dirent.h>

2003-10-21  Paolo Maggi  <paolo.maggi@polito.it>

	* dialogs/gedit-page-setup-dialog.c (get_page_setup_dialog):
	fixes some troublesome strings (bug #117360 and bug #115633, patch
	by Dafydd Harries <daf@parnassus.ath.cx>)

2003-10-20  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit-print.c (preview_finished_cb)(print_finished_cb): fixes
	bug #124769 (patch by bland@mail.ru)

2003-10-20  Paolo Maggi  <paolo.maggi@polito.it> 

	* gedit-commands.c (gedit_cmd_help_about): s/Gnome/the GNOME Desktop

2003-10-20  Paolo Maggi  <paolo.maggi@polito.it>

	* Makefile.am (INCLUDES): remove -DGTK_DISABLE_DEPRECATED and
	-DGNOME_DISABLE_DEPRECATED
	
	* dialogs/Makefile.am: ditto

2003-09-26  Paolo Maggi  <paolo.maggi@polito.it>

	*  plugin-manager.glade2: added a label to the About Plugin button
	(fixes bug #117056)

2003-09-26  Paolo Maggi  <paolo.maggi@polito.it>

	* gedit2.c: #include <locale.h>, fixes bug #122790 (thanks to 
	  msuarezalvarez@arnet.com.ar and Ettore Perazzoli)

2003-09-25  Paolo Maggi  <paolo.maggi@polito.it>
 
 	* gedit-plugin.[ch](gedit_plugin_locate_program): added gconf_key and
 	  help_id parameters.
 
 	* dialogs/gedit-dialogs.h (gedit_plugin_program_location_dialog): 