@@ -34,15 +34,15 @@ gedit-@GEDIT_MAJOR@.pc: gedit.pc
 	cp gedit.pc gedit-@GEDIT_MAJOR@.pc
 
 EXTRA_DIST = $(desktop_in_files)	\
-#	$(desktop_DATA)			\
 	$(keys_in_files)		\
-#	$(keys_DATA)			\
 	$(schemas_in_files)		\
-#	$(schemas_DATA)			\
 	$(server_in_files)		\
-#	$(server_DATA)			\
 	$(man_MANS)			\
 	$(app_DATA)			\
+	$(desktop_DATA)			\
+	$(keys_DATA)			\
+	$(schemas_DATA)			\
+	$(server_DATA)			\
 	gedit.pc.in
 
 if GCONF_SCHEMAS_INSTALL
@@ -61,6 +61,6 @@ DISTCLEANFILES = 			\
 	$(keys_DATA)			\
 	$(schemas_DATA)			\
 	$(server_DATA)			\
-	gedit-@GEDIT_MAJOR@.pc
+	$(pkgconfig_DATA)
 
 
