@@ -1,15 +1,18 @@
 gladedir = $(datadir)/gedit-2/glade/
 
-INCLUDES = \
+INCLUDES = 							\
 	-I$(top_srcdir)						\
 	-I$(top_srcdir)/gedit 					\
 	$(GEDIT_CFLAGS) 					\
 	-DGNOME_ICONDIR=\""$(datadir)/pixmaps"\" 		\
-	-DGEDIT_GLADEDIR=\""$(datadir)/gedit-2/glade/"\"	\
+	-DGEDIT_GLADEDIR=\""$(datadir)/gedit-2/glade/"\"	
+
+if MAINTAINER_MODE
+INCLUDES += 							\
 	-DG_DISABLE_DEPRECATED					\
 	-DGDK_DISABLE_DEPRECATED				\
-	-DGDK_PIXBUF_DISABLE_DEPRECATED				
-
+	-DGDK_PIXBUF_DISABLE_DEPRECATED		
+endif
 
 noinst_LTLIBRARIES = libdialogs.la
 
