@@ -7,16 +7,21 @@ taglist_DATA = \
 	Latex.tags	\
 	XSLT.tags
 
-INCLUDES = \
-	-I$(top_srcdir) 				\
-	$(GEDIT_CFLAGS) 				\
-	-DGNOME_ICONDIR=\""$(datadir)/pixmaps"\" 	\
+INCLUDES = 							\
+	-I$(top_srcdir) 					\
+	$(GEDIT_CFLAGS) 					\
+	-DGNOME_ICONDIR=\""$(datadir)/pixmaps"\" 		\
 	-DGEDIT_GLADEDIR=\""$(datadir)/gedit-2/glade/"\"	\
-	-DGEDIT_TAGLIST_DIR=\""$(taglistdir)/"\"	\
-	-DG_DISABLE_DEPRECATED				\
-	-DGDK_DISABLE_DEPRECATED			\
-	-DGDK_PIXBUF_DISABLE_DEPRECATED			\
+	-DGEDIT_TAGLIST_DIR=\""$(taglistdir)/"\"
+
+if MAINTAINER_MODE
+INCLUDES +=							\
+	-DG_DISABLE_DEPRECATED					\
+	-DGDK_DISABLE_DEPRECATED				\
+#	-DGTK_DISABLE_DEPRECATED				\
+	-DGDK_PIXBUF_DISABLE_DEPRECATED				\
 	-DGNOME_DISABLE_DEPRECATED			
+endif
 
 plugin_LTLIBRARIES = libtaglist.la
 
