@@ -1,3 +1,7 @@
+2003-11-23  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* */Makefile.am: Disable deprecates only in maintainer mode
+
 2003-10-21  Paolo Maggi  <paolo.maggi@polito.it> 
 
 	* spell/Makefile.am: don't distribute generated files (fixes
