@@ -1,3 +1,7 @@
+2003-11-23  Paolo Maggi  <paolo.maggi@polito.it>
+
+	* */Makefile.am: Disable deprecates only in maintainer mode
+
 2003-10-23  Paolo Maggi  <paolo.maggi@polito.it>
 	
 	Fixed bug #102543
